--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1111,3 +1111,8 @@ section {
     padding-right: 20px 15px;
   }
 }
+@media only screen and (max-width: 600px) {
+  .wp-block-media-text__content {
+    margin-top: 20px!important;
+  }
+}
