--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1113,6 +1113,6 @@ section {
 }
 @media only screen and (max-width: 600px) {
   .wp-block-media-text__content {
-    margin-top: 20px!important;
+    margin-top: 20px;
   }
 }
